--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-router": "3.0.1",
     "vue-transition.css": "^1.0.2",
     "vuex": "3.0.1",
-    "xlsx": "^0.14.0"
+    "xlsx": "^0.14.0",
+    "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
