--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clipboard": "^2.0.0",
     "echarts": "^4.1.0",
     "element-ui": "2.4.9",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.9",
     "file-saver": "^1.3.8",
     "fullcalendar-scheduler": "1.9.0",
     "jquery": "^3.3.1",
